--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,5 +34,5 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@v4.3.0
       with:
         branch: gh-pages # The branch the action should deploy to.
-        folder: ./build # The folder the action should deploy.
+        folder: ./dist # The folder the action should deploy.
     
