--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,6 +18,9 @@ jobs:
       matrix:
         node-version: [20.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+    
+    permissions:
+      contents: write
 
     steps:
     - run: npm install -g pnpm
@@ -35,4 +38,5 @@ jobs:
       with:
         branch: gh-pages # The branch the action should deploy to.
         folder: ./dist # The folder the action should deploy.
+        
     
